--- a/tools/metas/2019.in
+++ b/tools/metas/2019.in
@@ -4,3 +4,5 @@ properties:
   description: Microsoft Windows 2019 Datacenter
   os: windows
   release: 2019
+  variant: default
+  architecture: x86_64
