--- a/tools/metas/10e.in
+++ b/tools/metas/10e.in
@@ -4,3 +4,5 @@ properties:
   description: Microsoft Windows 10 Enterprise
   os: windows
   release: 10e
+  variant: default
+  architecture: x86_64
