--- a/tools/metas/2012.in
+++ b/tools/metas/2012.in
@@ -4,3 +4,5 @@ properties:
   description: Microsoft Windows 2012 R2 Standard
   os: windows
   release: 2012
+  variant: default
+  architecture: x86_64
